[project]
name = "unit-testing"
version = "0.1.0"
description = "Unit testing project with pytest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "typing>=3.10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
